<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>livox_sdk2_driver</name>
  <version>0.0.0</version>
  <description>Livox MID-360 ROS 2 Driver with internal Madgwick Filter for IMU orientation fusion.</description>
  <maintainer email="drone@todo.todo">drone</maintainer>
  <license>MIT</license>
  <depend>eigen</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
